ensure blog entries have side margin on mobile

--- a/assets/css/src/parts/terraso.scss
+++ b/assets/css/src/parts/terraso.scss
@@ -376,7 +376,7 @@ header.tg-page-header.tg-page-header--left-right {
 		margin-top: 20px;
 	}
 
-	#content .tg-container {
+	.page #content .tg-container {
 		padding-left: 0;
 		padding-right: 0;
 	}
